# factorio-docs-mcp

./: README.md  SKILL.md  pyproject.toml
references/: api_urls.md  docs.db  runtime-api.json
scripts/: build_index.py  fetch_api.py  search.py  update.py
src/factorio_docs_mcp/: __init__.py  __main__.py  cache.py  html_extract.py  index.py  server.py
tests/: full_stdio.py  smoke_stdio.py  test_e2e.py
