[project]
name = "factorio-docs-mcp"
version = "0.1.0"
description = "MCP server that lively downloads the Factorio Lua API docs and exposes a grep engine over them."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.scripts]
factorio-docs-mcp = "factorio_docs_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/factorio_docs_mcp"]
